# -Football-Match-Outcome-And-Score-Prediction

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  render.yaml
backend/: app.py
config/: config.yaml
data/processed/: features.parquet  results_cleaned.parquet
frontend/: .gitignore  .vercelignore  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
frontend/__tests__/: teamFlag.test.ts
frontend/api/: index.py
frontend/api/artifacts/: feature_columns.json  score_regressor_scaler.pkl  tournament_tier_encoder.pkl  tournament_tier_map.json
frontend/api/models/: home_score_regressor.pkl
frontend/api/scripts/: predict_match.py  validate_worldcup2022.py
frontend/api/src/football_predictor/data/: loader.py  name_resolver.py
frontend/api/src/football_predictor/evaluation/: metrics.py  splitter.py
frontend/api/src/football_predictor/features/: feature_builder.py  rolling_stats.py
frontend/api/src/football_predictor/models/: baseline_elo.py
frontend/api/src/football_predictor/utils/: io.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/rankings/: page.tsx
frontend/app/scorers/: page.tsx
frontend/app/validation/: page.tsx
frontend/components/: NavBar.tsx  SiteBackground.tsx  TeamFlag.tsx
frontend/lib/: teamFlags.ts
notebooks/: 01_exploratory_analysis.ipynb  simple.ipynb
outputs/artifacts/: feature_columns.json  final_feature_columns.json  (+1 more)
scripts/: compute_elo_artifacts.py  predict_match.py
src/: __init__.py
(+27 files in other folders)
