[project]
name = "football-match-outcome-and-score-prediction"
version = "0.1.0"
description = "Football match outcome and score prediction project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.63.0",
  "iniconfig==2.3.0",
  "joblib==1.5.3",
  "kiwisolver==1.5.0",
  "matplotlib==3.11.0",
  "narwhals==2.23.0",
  "numpy==2.5.1",
  "nvidia-nccl-cu12==2.30.7",
  "packaging==26.2",
  "pandas==3.0.3",
  "pyarrow==24.0.0",
  "pillow==12.3.0",
  "pluggy==1.6.0",
  "pygments==2.20.0",
  "pyparsing==3.3.2",
  "pytest==9.1.1",
  "python-dateutil==2.9.0.post0",
  "pyyaml==6.0.3",
  "scikit-learn==1.9.0",
  "scipy==1.18.0",
  "six==1.17.0",
  "threadpoolctl==3.6.0",
  "xgboost==3.3.0",
]
